# monte-carlo-martingale

./: 1.monte_carlo_martingale.ipynb  README.md  martingale-mt.ipynb  monte_carlo_martingale.ipynb  pyproject.toml  requirements.txt
utils/: __init__.py  simulation.py  util.py
