[tool.poetry]
name = "monte-carlo-martingale"
version = "0.1.0"
description = "Martingale Strategy: Monte Carlo simulation + Numba test"
authors = ["ET-DS"]

[tool.poetry.dependencies]
python = ">=3.7.1, <3.10"
numba = "0.54.1"
numpy = "1.20.3"
pandas = "1.3.5"
matplotlib = "3.5.1"
seaborn = "0.11.2"
notebook = "^6.4.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
